adding footer and update content

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,9 @@
   text-align: center;
   background-color: var(--bg-main);
 }
+.app-wrapper{
+  text-align: center;
+}
 
 .home-content {
   display: flex;
